Add rpcinterface lines

--- a/setup/delugevpn.conf
+++ b/setup/delugevpn.conf
@@ -1,6 +1,9 @@
 [unix_http_server]
 file=/run/supervisor.sock
 
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
 [program:start-script]
 autorestart = false
 startsecs = 0
