Use stopasgroup for flexget to ensure flexget is killed as well as the launching script

--- a/setup/delugevpn.conf
+++ b/setup/delugevpn.conf
@@ -32,4 +32,5 @@ command = /home/nobody/privoxy.sh
 [program:flexget]
 user = nobody
 command = /home/nobody/flexget.sh
+stopasgroup = true
 umask = 000
